# Taller1_EstructuraDeDatos

./: CMakeLists.txt  README.md  main.cpp
Cancion/: cancion.cpp  cancion.h
Clases/: Cancion.cpp  Cancion.h  ListaCanciones.cpp  ListaCanciones.h  Nodo.h
Estructura/: music_source.txt  status.cfg
Logica/: Reproductor.cpp  Reproductor.h
Main/: main.cpp
TDA/: lista.cpp  lista.h
